Fix AVP stereo fusion: apply per-eye off-axis projection to GPU raster
The non-fusion ("doubled image") was because MC 26.1.2's
Camera.extractRenderState no longer routes through Projection.getMatrix,
so Vivecraft's WrapOperation only reached culling/view-rotation while the
rasterized cameraRenderState.projectionMatrix stayed symmetric. Both eyes
rendered the same symmetric frustum, which cannot fuse on the Vision Pro's
off-axis lenses. GameRendererVRMixin now forces the asymmetric off-axis
focal/shear terms onto that matrix for L/R passes (depth range preserved).

Also lands the ALVR reprojection contract fix (always submit under the
rendered-for sample timestamp, drop if missing, report composed/present
timing, NaN-guard view_config), end-to-end frame-capture instrumentation
(host FrameCapture + Vivecraft PNG dumps + mock-host replayable
view_config), stereo IPD bisection knob, and bridge/comfort hardening.

Verified: mock-host run dumps confirm the per-eye render is now genuinely
off-axis (uniform horizontal skew matching device tangents).

Co-authored-by: Cursor <cursoragent@cursor.com>